PR/45841: Henning Petersen: One sizeof is enough.